# automata25_mephi

./: README.md
1/: .gitignore  CMakeLists.txt  Makefile  README.md  run.cpp  task.txt
1/0_re2c/: generated.cpp  parser.cpp
1/flex_files/: FlexResolver.l  Makefile
1/interfaces/: IGenerator.hpp  IResolver.hpp
1/re2c_files/: Makefile  generated.cpp  generated.hpp  parser.cpp
1/resolvers/: CMakeLists.txt
1/resolvers/include/: FlexResolver.hpp  RegexResolver.hpp  SMCResolver.hpp
1/resolvers/source/: FlexResolver.cpp  RegexResolver.cpp  SMCResolver.cpp
1/smc_files/: Makefile  SMCResolver.sm  SMCResolver_sm.cpp  SMCResolver_sm.h
1/tests/: CMakeLists.txt  timer.cpp
1/tests/generator/: CMakeLists.txt
1/tests/generator/include/: Generator.hpp  generator.hpp
1/tests/generator/source/: Generator.cpp  generator.cpp
1/tests/generators/: CMakeLists.txt
1/tests/generators/include/: CorrectGenerator.hpp  IncorrectGenerator.hpp
1/tests/generators/source/: CorrectGenerator.cpp  IncorrectGenerator.cpp
1/z_files/: in.txt  out.txt
2/: .gitignore  CMakeLists.txt  Makefile  README.md  ast.dot  ast_plus.dot  automaton.dot  run.cpp
2/compile_benchmark/: CMakeLists.txt  benchmark.cpp
2/display_functions/: display.cpp  display.hpp
2/myre/: CMakeLists.txt
2/myre/Regex/: CMakeLists.txt
2/myre/Regex/include/: context.hpp  dfa.hpp  errors.hpp  nodes.hpp  parser.hpp  regex.hpp  smatch.hpp  syntax_node.hpp
2/myre/Regex/src/: context.cpp  dfa.cpp  dfa_operations.cpp  nodes.cpp  parser.cpp  regex.cpp  syntax_node.cpp
2/myre/include/: myre.hpp
2/myre/src/: compile.cpp  fullmatch.cpp  myre.cpp  search.cpp
2/tests/: CMakeLists.txt  fullmatch_tests.hpp
2/tests/basic_tests/: CMakeLists.txt  fullmatch_basic.cpp  range_tests.cpp  search_basic.cpp  search_tests.hpp
2/tests/match_tests/: CMakeLists.txt  lazy_search_tests.cpp  search_first_tests.cpp
2/tests/operation_tests/: CMakeLists.txt  complement.cpp  intersection.cpp
2/tests/parser_tests/: CMakeLists.txt  syntax_test.cpp
2/tests/regex_tests/: CMakeLists.txt  basic_tests.cpp  fullmatch_basic.cpp  range_tests.cpp  regex_test.cpp
2/tests/syntax_tests/: CMakeLists.txt  syntax_test.cpp
2/visuals/: ast.dot  ast_plus.dot  automaton.dot  tokens.dot
